--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,21 @@
     <title>Kevin Makeez</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <nav id="container"> 
-       <ul>
-           <li>
-               HOME
-               ABOUT
-               DISCOGRAPHY
-               PERFORMANCES
-               GALLERY
-               CONTACT
-           </li>
-       </ul>
-
-
-    </nav>
+    <h1>
+        <strong><u>A POLITICIAN'S  CONFESSION</u></strong>
+    </h1>
+    <p><i> I was born for the love<br> Yet I live for the hate
+        <br> It 's impossible to simulate and elucidate what I feel inside
+        <br>I've got a couple of demons ready to demonetise and sever my political ties<br>So I won't break my back, I'll back their current and future plans<br> I no longer I'm the man with the plan<br>I'm just a man trying to impress both sides<br>A
+        sycophant of loved psychopaths<br>So don't dare cross our path<br>Cause we won't think twice before ripping out your heart<br>We've got the power and the backing of your stupid sons<br>Ha-Ha,how's that for justfying stats?<br>I had mixed feelings
+        before selling my country<br>But the shillings distorted my calling<br>Who wouldn't want to forever stay balling?<br>Busy eating cheese<br>Easy to decide which human beings<br>Will be relocated under,six-feet deep<br>A steep slippery slope that
+        I cope with<br>How? I don't know<br>All I know is<br>Every night, I sleep like a well-fed innocent child.
+    </i></p>
 </body>
+<footer>
+    A Poem By Kevin Makeez. Copyright 2022.
+</footer>
+
 </html>
