--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>
         <strong><u>A POLITICIAN'S  CONFESSION</u></strong>
     </h1>
-    <p><i> I was born for the love<br> Yet I live for the hate
+    <p><i> I was born out of love<br> Yet I live for the hate
         <br> It 's impossible to simulate and elucidate what I feel inside
         <br>I've got a couple of demons ready to demonetise and sever my political ties<br>So I won't break my back, I'll back their current and future plans<br> I no longer I'm the man with the plan<br>I'm just a man trying to impress both sides<br>A
         sycophant of loved psychopaths<br>So don't dare cross our path<br>Cause we won't think twice before ripping out your heart<br>We've got the power and the backing of your stupid sons<br>Ha-Ha,how's that for justfying stats?<br>I had mixed feelings
